
# ##########################################################
# Package

[package]

authors = [
	"Matt Wilson <matthew@synesis.com.au>",
]
description = "recls (for Rust)"
edition = "2021"
homepage = "https://github.com/synesissoftware/recls.Rust"
license = "BSD-3-Clause"
name = "recls"
readme = "README.md"
version = "0.0.0"


# ##########################################################
# Targets

[lib]
name = "recls"
path = "src/lib.rs"


# ##########################################################
# Features

[features]


# ##########################################################
# Dependencies

[dependencies]

base-traits = { version = "~0.0", default-features = false, features = [
] }
fastparse = { version = "~0.0", default-features = false, features = [
] }
libpath = { version = "~0.0", default-features = false, features = [
] }


[dev-dependencies]

criterion = { version = "0.5", default-features = false, features = [
] }
test_help-rs = { version = "0.1", default-features = false, features = [
] }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

